feat: adding default values

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
                     class="nav__logo-image"
                 />
 
-                Névio C. Magagnin
+                Névio's Portfolio
             </a>
 
-            <button class="button__icon nav__button">
-                <i class="ri-moon-line button__icon-icon nav__button-icon"></i>
-            </button>
+            <div class="nav__buttons">
+                <button class="icon__button nav__button">
+                    <i class="ri-translate-2 icon__button-icon nav__button-icon"></i>
+                </button>
+    
+                <button class="icon__button nav__button">
+                    <i class="ri-moon-line icon__button-icon nav__button-icon"></i>
+                </button>
+            </div>
         </nav>
     </header>
 
@@ -42,7 +48,7 @@
                         Nice to meet you, I am Névio, full-stack developer, let's learn more about me?
                     </p>
 
-                    <a href="#" class="button">
+                    <a href="#about" class="button">
                         Get started
                         <i class="ri-arrow-right-line button-icon"></i>
                     </a>
@@ -331,13 +337,6 @@
                 </div>
             </div>
         </section>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
     </main>
     
     <script src="./assets/js/scrollreveal.min.js"></script>
