feat: adding projects section configuration

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </a>
 
             <div class="nav__buttons">
-                <button class="icon__button nav__button">
-                    <i class="ri-translate-2 icon__button-icon nav__button-icon"></i>
+                <button class="icon__button">
+                    <i class="ri-translate-2 icon__button-icon"></i>
                 </button>
     
-                <button class="icon__button nav__button">
-                    <i class="ri-moon-line icon__button-icon nav__button-icon"></i>
+                <button class="icon__button">
+                    <i class="ri-moon-line icon__button-icon"></i>
                 </button>
             </div>
         </nav>
@@ -271,68 +271,92 @@
                 <h2 class="section__title">Projects</h2>
             </div>
 
-            <div class="projects__container container">
+            <div class="projects__container">
                 <div class="project">
-                    <div class="project__video">
-                        <div class="project__video-circle">
-                            <i class="ri-play-line project__video-play"></i>
+                    <div class="project__media project__media-project1">
+                        <div class="project__media-circle">
+                            <i class="ri-play-line project__media-icon"></i>
                         </div>
                     </div>
 
                     <div class="project__data">
-                        <h2 class="project__title">Hand Detector</h2>
+                        <div>
+                            <h2 class="project__title">Hand Detector</h2>
 
-                        <p class="project__description">
-                            The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
-                        </p>
+                            <p class="project__description">
+                                The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
+                            </p>
+                        </div>
+
+                        <button class="icon__button">
+                            <i class="ri-github-line icon__button-icon"></i>
+                        </button>
                     </div>
                 </div>
 
-                <div class="project project-background project-reverse">
-                    <div class="project__video">
-                        <div class="project__video-circle">
-                            <i class="ri-play-line project__video-play"></i>
+                <div class="project project-reverse">
+                    <div class="project__media project__media-project2">
+                        <div class="project__media-circle">
+                            <i class="ri-play-line project__media-icon"></i>
                         </div>
                     </div>
 
                     <div class="project__data">
-                        <h2 class="project__title">Hand Detector</h2>
+                        <div>
+                            <h2 class="project__title">Snake Game</h2>
 
-                        <p class="project__description">
-                            The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
-                        </p>
+                            <p class="project__description">
+                                Another Python project to learn much more about Python programming, POO with Python and of course, to have fun while testing it!
+                            </p>
+                        </div>
+
+                        <button class="icon__button">
+                            <i class="ri-github-line icon__button-icon"></i>
+                        </button>
                     </div>
                 </div>
 
                 <div class="project">
-                    <div class="project__video">
-                        <div class="project__video-circle">
-                            <i class="ri-play-line project__video-play"></i>
+                    <div class="project__media project__media-project3">
+                        <div class="project__media-circle">
+                            <i class="ri-image-line project__media-icon"></i>
                         </div>
                     </div>
 
                     <div class="project__data">
-                        <h2 class="project__title">Hand Detector</h2>
+                        <div>
+                            <h2 class="project__title">User Interface Prototype</h2>
 
-                        <p class="project__description">
-                            The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
-                        </p>
+                            <p class="project__description">
+                                The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
+                            </p>
+                        </div>
+
+                        <button class="icon__button">
+                            <i class="ri-github-line icon__button-icon"></i>
+                        </button>
                     </div>
                 </div>
 
-                <div class="project project-background project-reverse">
-                    <div class="project__video">
-                        <div class="project__video-circle">
-                            <i class="ri-play-line project__video-play"></i>
+                <div class="project project-reverse">
+                    <div class="project__media project__media-project4">
+                        <div class="project__media-circle">
+                            <i class="ri-image-line project__media-icon"></i>
                         </div>
                     </div>
 
                     <div class="project__data">
-                        <h2 class="project__title">Hand Detector</h2>
+                        <div>
+                            <h2 class="project__title">Via Notes</h2>
 
-                        <p class="project__description">
-                            The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
-                        </p>
+                            <p class="project__description">
+                                The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
+                            </p>
+                        </div>
+
+                        <button class="icon__button">
+                            <i class="ri-github-line icon__button-icon"></i>
+                        </button>
                     </div>
                 </div>
             </div>
