feat: Adding more sections

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     Full-stack developer, I create websites, web apps, mobile apps, API's and with Figma I create UI's to the projects that I work with. I do not have an university degree, all the knowleage that I know came from online courses such as Udemy, Youtube, Articles and others.
                 </p>
 
-                <a href="#" class="button">
+                <a href="#contact" class="button">
                     Contact me
                     <i class="ri-mail-send-line button-icon"></i>
                 </a>
@@ -361,7 +361,108 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact section container" id="contact">
+            <div class="section__titles">
+                <h3 class="section__subtitle">Reach me</h3>
+                <h2 class="section__title">Contacts</h2>
+            </div>
+
+            <div class="contact__container">
+                <div class="contact__data">
+                    <h2 class="contact__title">
+                        Find me
+                    </h2>
+
+                    <div class="contact__social">
+                        <div class="social__card">
+                            <i class="ri-mail-send-line social__card-icon"></i>
+                            <h3 class="social__card__title">E-mail</h3>
+                            <span class="social__card__data">nevio.dev@gmail.com</span>
+                        </div>
+
+                        <div class="social__card">
+                            <i class="ri-whatsapp-line social__card-icon"></i>
+                            <h3 class="social__card__title">Whatsapp</h3>
+                            <span class="social__card__data">+55 48 99638-8761</span>
+                        </div>
+
+                        <div class="social__card">
+                            <i class="ri-linkedin-box-line social__card-icon"></i>
+                            <h3 class="social__card__title">LinkedIn</h3>
+                            <span class="social__card__data">Névio Costa Magagnin</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="contact__data">
+                    <h2 class="contact__title">
+                        Talk to me
+                    </h2>
+
+                    <div class="contact__form">
+                        <div class="input">
+                            <input type="text" id="name" class="input__field">
+                            <label for="name" class="input__label">Your name</label>
+                        </div>
+
+                        <div class="input">
+                            <input type="text" id="email" class="input__field">
+                            <label for="email" class="input__label">E-mail</label>
+                        </div>
+
+                        <div class="input">
+                            <textarea id="message" class="input__field input__field-textarea"></textarea>
+                            <label for="message" class="input__label">Message</label>
+                        </div>
+
+                        <button class="button">
+                            Send message
+                            <i class="ri-send-plane-2-line button-icon"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <button class="icon__button scrollup" id="scroll-up">
+        <i class="ri-arrow-up-line icon__button-icon"></i>
+    </button>
+
+    <footer class="footer">
+        <h1 class="footer__title">
+            Névio C. Magagnin
+        </h1>
+
+        <div class="footer__links footer__row">
+            <a href="#about" class="footer__link">About</a>
+            <a href="#skills" class="footer__link">Skills</a>
+            <a href="#projects" class="footer__link">Projects</a>
+        </div>
+
+        <div class="footer__social footer__row">
+            <a href="mailto:neviocostamagagnin@gmail.com" target="_blank" class="social__link">
+                <i class="ri-mail-send-line social__icon"></i>
+            </a>
+
+            <a href="https://api.whatsapp.com/send?phone=5548996388761" target="_blank" class="social__link">
+                <i class="ri-whatsapp-line social__icon"></i>
+            </a>
+
+            <a href="https://www.linkedin.com/in/n%C3%A9vio-magagnin-045710177/" target="_blank" class="social__link">
+                <i class="ri-linkedin-box-line social__icon"></i>
+            </a>
+
+            <a href="https://www.instagram.com/nevio_costa/" target="_blank" class="social__link">
+                <i class="ri-instagram-line social__icon"></i>
+            </a>
+        </div>
+
+        <p class="footer__copy">
+            &copy; Névio Costa Magagnin. All rights reserved
+        </p>
+    </footer>
     
     <script src="./assets/js/scrollreveal.min.js"></script>
     <script src="./assets/js/main.js"></script>
