feat: Adding new contact section

--- a/index.html
+++ b/index.html
@@ -368,60 +368,46 @@
                 <h2 class="section__title">Contacts</h2>
             </div>
 
-            <div class="contact__container">
-                <div class="contact__data">
-                    <h2 class="contact__title">
-                        Find me
-                    </h2>
+            <div class="contact__container grid">
+                <a href="https://www.linkedin.com/in/n%C3%A9vio-magagnin-045710177/" target="_blank" class="contact__card">
+                    <div class="contact__card-overflow overflow-1"></div>
 
-                    <div class="contact__social">
-                        <div class="social__card">
-                            <i class="ri-mail-send-line social__card-icon"></i>
-                            <h3 class="social__card__title">E-mail</h3>
-                            <span class="social__card__data">nevio.dev@gmail.com</span>
-                        </div>
+                    <i class="ri-linkedin-box-line contact__card-icon"></i>
+                    <h3 class="contact__title">LinkedIn</h3>
+                    <span class="contact__data">Névio Magagnin</span>
 
-                        <div class="social__card">
-                            <i class="ri-whatsapp-line social__card-icon"></i>
-                            <h3 class="social__card__title">Whatsapp</h3>
-                            <span class="social__card__data">+55 48 99638-8761</span>
-                        </div>
+                    <div class="contact__card-overflow overflow-2"></div>
+                </a>
 
-                        <div class="social__card">
-                            <i class="ri-linkedin-box-line social__card-icon"></i>
-                            <h3 class="social__card__title">LinkedIn</h3>
-                            <span class="social__card__data">Névio Costa Magagnin</span>
-                        </div>
-                    </div>
-                </div>
+                <a href="mailto:neviocostamagagnin@gmail.com" target="_blank" class="contact__card">
+                    <div class="contact__card-overflow overflow-1"></div>
 
-                <div class="contact__data">
-                    <h2 class="contact__title">
-                        Talk to me
-                    </h2>
+                    <i class="ri-mail-send-line contact__card-icon"></i>
+                    <h3 class="contact__title">E-mail</h3>
+                    <span class="contact__data">neviocostamagagnin@gmail.com</span>
 
-                    <div class="contact__form">
-                        <div class="input">
-                            <input type="text" id="name" class="input__field">
-                            <label for="name" class="input__label">Your name</label>
-                        </div>
+                    <div class="contact__card-overflow overflow-2"></div>
+                </a>
 
-                        <div class="input">
-                            <input type="text" id="email" class="input__field">
-                            <label for="email" class="input__label">E-mail</label>
-                        </div>
+                <a href="https://www.instagram.com/nevio_costa/" target="_blank" class="contact__card">
+                    <div class="contact__card-overflow overflow-1"></div>
 
-                        <div class="input">
-                            <textarea id="message" class="input__field input__field-textarea"></textarea>
-                            <label for="message" class="input__label">Message</label>
-                        </div>
+                    <i class="ri-instagram-line contact__card-icon"></i>
+                    <h3 class="contact__title">Instagram</h3>
+                    <span class="contact__data">@nevio_costa</span>
 
-                        <button class="button">
-                            Send message
-                            <i class="ri-send-plane-2-line button-icon"></i>
-                        </button>
-                    </div>
-                </div>
+                    <div class="contact__card-overflow overflow-2"></div>
+                </a>
+
+                <a href="https://api.whatsapp.com/send?phone=5548996388761" target="_blank" class="contact__card">
+                    <div class="contact__card-overflow overflow-1"></div>
+
+                    <i class="ri-whatsapp-line contact__card-icon"></i>
+                    <h3 class="contact__title">Whatsapp</h3>
+                    <span class="contact__data">+55 48 99638-8761</span>
+
+                    <div class="contact__card-overflow overflow-2"></div>
+                </a>
             </div>
         </section>
     </main>
