feat: Adding new card animation when hover

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 
             <div class="skills__container">
                 <div class="skill__card">
+                    <div class="card-overflow overflow-1"></div>
+
                     <div class="skill__card__title">Back-end</div>
 
                     <div class="skill__card__abilities">
@@ -183,9 +185,13 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="card-overflow overflow-2"></div>
                 </div>
 
                 <div class="skill__card">
+                    <div class="card-overflow overflow-1"></div>
+
                     <div class="skill__card__title">Front-end</div>
 
                     <div class="skill__card__abilities">
@@ -261,6 +267,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="card-overflow overflow-2"></div>
                 </div>
             </div>
         </section>
@@ -370,43 +378,43 @@
 
             <div class="contact__container grid">
                 <a href="https://www.linkedin.com/in/n%C3%A9vio-magagnin-045710177/" target="_blank" class="contact__card">
-                    <div class="contact__card-overflow overflow-1"></div>
+                    <div class="card-overflow overflow-1"></div>
 
                     <i class="ri-linkedin-box-line contact__card-icon"></i>
                     <h3 class="contact__title">LinkedIn</h3>
-                    <span class="contact__data">Névio Magagnin</span>
+                    <span class="contact__data">Névio Costa Magagnin</span>
 
-                    <div class="contact__card-overflow overflow-2"></div>
+                    <div class="card-overflow overflow-2"></div>
                 </a>
 
                 <a href="mailto:neviocostamagagnin@gmail.com" target="_blank" class="contact__card">
-                    <div class="contact__card-overflow overflow-1"></div>
+                    <div class="card-overflow overflow-1"></div>
 
                     <i class="ri-mail-send-line contact__card-icon"></i>
                     <h3 class="contact__title">E-mail</h3>
                     <span class="contact__data">neviocostamagagnin@gmail.com</span>
 
-                    <div class="contact__card-overflow overflow-2"></div>
+                    <div class="card-overflow overflow-2"></div>
                 </a>
 
                 <a href="https://www.instagram.com/nevio_costa/" target="_blank" class="contact__card">
-                    <div class="contact__card-overflow overflow-1"></div>
+                    <div class="card-overflow overflow-1"></div>
 
                     <i class="ri-instagram-line contact__card-icon"></i>
                     <h3 class="contact__title">Instagram</h3>
                     <span class="contact__data">@nevio_costa</span>
 
-                    <div class="contact__card-overflow overflow-2"></div>
+                    <div class="card-overflow overflow-2"></div>
                 </a>
 
                 <a href="https://api.whatsapp.com/send?phone=5548996388761" target="_blank" class="contact__card">
-                    <div class="contact__card-overflow overflow-1"></div>
+                    <div class="card-overflow overflow-1"></div>
 
                     <i class="ri-whatsapp-line contact__card-icon"></i>
                     <h3 class="contact__title">Whatsapp</h3>
                     <span class="contact__data">+55 48 99638-8761</span>
 
-                    <div class="contact__card-overflow overflow-2"></div>
+                    <div class="card-overflow overflow-2"></div>
                 </a>
             </div>
         </section>
