feat: Adding change theme feature

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./assets/images/person.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
-<body>
+<body class="light-theme">
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
@@ -29,8 +29,8 @@
                     <i class="ri-translate-2 icon__button-icon"></i>
                 </button>
     
-                <button class="icon__button">
-                    <i class="ri-moon-line icon__button-icon"></i>
+                <button class="icon__button" id="change-theme">
+                    <i class="ri-moon-line icon__button-icon" id="change-theme-icon"></i>
                 </button>
             </div>
         </nav>
