feat: Finished desktop version

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </a>
 
             <div class="nav__buttons">
-                <button class="icon__button">
-                    <i class="ri-translate-2 icon__button-icon"></i>
-                </button>
+                <a download="" href="./assets/pdf/nevio-cv.pdf" class="icon__button">
+                    <i class="ri-file-user-line icon__button-icon"></i>
+                </a>
     
-                <button class="icon__button" id="change-theme">
+                <a class="icon__button" id="change-theme">
                     <i class="ri-moon-line icon__button-icon" id="change-theme-icon"></i>
-                </button>
+                </a>
             </div>
         </nav>
     </header>
@@ -281,11 +281,7 @@
 
             <div class="projects__container">
                 <div class="project">
-                    <div class="project__media project__media-project1">
-                        <div class="project__media-circle">
-                            <i class="ri-play-line project__media-icon"></i>
-                        </div>
-                    </div>
+                    <div class="project__media project__media-project1"></div>
 
                     <div class="project__data">
                         <div>
@@ -296,18 +292,20 @@
                             </p>
                         </div>
 
-                        <button class="icon__button">
-                            <i class="ri-github-line icon__button-icon"></i>
-                        </button>
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/hand-recognition" target="_blank" class="icon__button">
+                                <i class="ri-github-line icon__button-icon"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_python-programming-software-activity-6864335079620018176-Xtld" target="_blank" class="icon__button">
+                                <i class="ri-linkedin-box-line icon__button-icon"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="project project-reverse">
-                    <div class="project__media project__media-project2">
-                        <div class="project__media-circle">
-                            <i class="ri-play-line project__media-icon"></i>
-                        </div>
-                    </div>
+                    <div class="project__media project__media-project2"></div>
 
                     <div class="project__data">
                         <div>
@@ -318,53 +316,59 @@
                             </p>
                         </div>
 
-                        <button class="icon__button">
-                            <i class="ri-github-line icon__button-icon"></i>
-                        </button>
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/Snake-Game-Python" target="_blank" class="icon__button">
+                                <i class="ri-github-line icon__button-icon"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_python-gamedeveloper-pythontraining-activity-6738945546129547264-zy0q" target="_blank" class="icon__button">
+                                <i class="ri-linkedin-box-line icon__button-icon"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="project">
-                    <div class="project__media project__media-project3">
-                        <div class="project__media-circle">
-                            <i class="ri-image-line project__media-icon"></i>
-                        </div>
-                    </div>
+                    <div class="project__media project__media-project3"></div>
 
                     <div class="project__data">
                         <div>
                             <h2 class="project__title">User Interface Prototype</h2>
 
                             <p class="project__description">
-                                The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
+                                This UI was created by me using React Native to improve my front-end skills in styling interfaces. I used styled-components to style it and reusable components in the screens.
                             </p>
                         </div>
 
-                        <button class="icon__button">
-                            <i class="ri-github-line icon__button-icon"></i>
-                        </button>
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/react-native-ui-prototype" target="_blank" class="icon__button">
+                                <i class="ri-github-line icon__button-icon"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_reactnative-react-ui-activity-6834526150740467712-KWZd" target="_blank" class="icon__button">
+                                <i class="ri-linkedin-box-line icon__button-icon"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="project project-reverse">
-                    <div class="project__media project__media-project4">
-                        <div class="project__media-circle">
-                            <i class="ri-image-line project__media-icon"></i>
-                        </div>
-                    </div>
+                    <div class="project__media project__media-project4"></div>
 
                     <div class="project__data">
                         <div>
                             <h2 class="project__title">Via Notes</h2>
 
                             <p class="project__description">
-                                The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
+                                This project is a full-stack test that Vialaser company passed to me in order to get a front-end job in the company. I had one week to complete it, but I actually finished in four days only programming at night.
                             </p>
                         </div>
 
-                        <button class="icon__button">
-                            <i class="ri-github-line icon__button-icon"></i>
-                        </button>
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/via-notes-frontend" target="_blank" class="icon__button">
+                                <i class="ri-github-line icon__button-icon"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
