feat: Starting making mobile version

--- a/index.html
+++ b/index.html
@@ -281,7 +281,11 @@
 
             <div class="projects__container">
                 <div class="project">
-                    <div class="project__media project__media-project1"></div>
+                    <img
+                        src="./assets/images/python-project-thumb-1.png"
+                        alt="hand-recognition"
+                        class="project__image"
+                    />
 
                     <div class="project__data">
                         <div>
@@ -305,7 +309,11 @@
                 </div>
 
                 <div class="project project-reverse">
-                    <div class="project__media project__media-project2"></div>
+                    <img
+                        src="./assets/images/python-project-thumb-2.png"
+                        alt="hand-recognition"
+                        class="project__image"
+                    />
 
                     <div class="project__data">
                         <div>
@@ -329,7 +337,11 @@
                 </div>
 
                 <div class="project">
-                    <div class="project__media project__media-project3"></div>
+                    <img
+                        src="./assets/images/rn-project-thumb-3.png"
+                        alt="hand-recognition"
+                        class="project__image"
+                    />
 
                     <div class="project__data">
                         <div>
@@ -353,7 +365,11 @@
                 </div>
 
                 <div class="project project-reverse">
-                    <div class="project__media project__media-project4"></div>
+                    <img
+                        src="./assets/images/via-notes-project-thumb.png"
+                        alt="hand-recognition"
+                        class="project__image"
+                    />
 
                     <div class="project__data">
                         <div>
