feat: adding new projects cards

--- a/index.html
+++ b/index.html
@@ -340,8 +340,77 @@
                 <h2 class="section__title">Projects</h2>
             </div>
 
-            <div class="projects__container">
+            <div class="projects__container grid">
+                <div class="project">
+                    <img
+                        src="./assets/images/python-project-1.png"
+                        class="project__image"
+                        alt="python-project-1"
+                    />
 
+                    <div class="project__data">
+                        <h3 class="project__name">Hand Detector</h3>
+                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/hand-recognition" target="_blank" class="project__link">Repository</a>
+                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_python-programming-software-activity-6864335079620018176-Xtld" target="_blank" class="project__link">LinkedIn Post</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img
+                        src="./assets/images/python-project-2.png"
+                        class="project__image"
+                        alt="python-project-1"
+                    />
+
+                    <div class="project__data">
+                        <h3 class="project__name">Snake Game</h3>
+                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/Snake-Game-Python" target="_blank" class="project__link">Repository</a>
+                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_python-gamedeveloper-pythontraining-activity-6738945546129547264-zy0q" target="_blank" class="project__link">LinkedIn Post</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img
+                        src="./assets/images/react-native-project-3.png"
+                        class="project__image"
+                        alt="python-project-1"
+                    />
+
+                    <div class="project__data">
+                        <h3 class="project__name">React Native UI Prototype</h3>
+                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/react-native-ui-prototype" target="_blank" class="project__link">Repository</a>
+                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_reactnative-react-ui-activity-6834526150740467712-KWZd" target="_blank" class="project__link">LinkedIn Post</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img
+                        src="./assets/images/via-notes-project.png"
+                        class="project__image"
+                        alt="python-project-1"
+                    />
+
+                    <div class="project__data">
+                        <h3 class="project__name">Via Notes</h3>
+                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+                        <div class="project__links">
+                            <a href="https://github.com/NEVI0/via-notes-frontend" target="_blank" class="project__link">Repository</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -511,13 +580,6 @@
             </div>
         </section> -->
     </main>
-
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
 
     <!-- <button class="icon__button scrollup" id="scroll-up">
         <i class="ri-arrow-up-line icon__button-icon"></i>
